# pina-colada

./: .env.example  .gitignore  AUTH_SETUP.md  DOCKER_MIGRATIONS.md  IMPLEMENTATION_SUMMARY.md  JIRA_SUPABASE_INTEGRATION.md  JIRA_TICKET_DRAFT.md  JIRA_TICKET_job_search_enhancements.md  JIRA_TICKET_multi_environment_setup.md  LOCAL_DEV_SETUP.md  MIGRATION_STRATEGY.md  PATTERN_COMPARISON.md  README.md  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.md  auth_spec.md  claude_api_cost_2025_11_08_to_2025_12_07.csv  dealtracker_models.py  dealtracker_schema.md  docker-compose.yml  graph-log.txt  leads-jobs-id.har  package-lock.json  pinacolada.co.har  prod-data.csv  render.yaml  sample_job_search_prompt.txt  search.har  test_search.txt
modules/agent/: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  GOOGLE_SHEETS_SETUP.md  README.md  RELATIONSHIPS_EXAMPLE.md  azure-pipelines-prod.yml  azure-pipelines-test.yml  go.mod  go.sum  postman_collection.json  postman_environment_local.json  postman_environment_prod.json  postman_environment_test.json  pyproject.toml  start-prod.sh  start.sh
modules/agent/cmd/: test_model_params.go
modules/agent/exports_transformed/: Account.csv  Deal.csv  Individual.csv  Job.csv  Lead.csv  Lead_Project.csv  Organization.csv  Project.csv  Role.csv  Tenant.csv  User.csv  User_Role.csv
modules/agent/imports/: 001_import_orgs.sql  002_migrate_jobs.sql  README.md  generate_job_migration.py  jobs.csv  prod-data-2025-11-13.csv
modules/agent/me/: summary.txt
modules/agent/migrations/: 001_dealtracker.sql  001_initial_schema.sql  002_add_lead_tracking.sql  002_dealtracker.sql  002_multitenancy.sql  002_rename_job_model_to_lead.sql  003_auth0_integration.sql  003_implement_dealtracker_schema.sql  004_role_tenant_id.sql  005_create_preferences_tables.sql  006_create_asset_tables.sql  008_tenant_industry.sql  009_organization_industry.sql  009_organization_industry.up.sql  011_polymorphic_tags.sql  012_lead_tenant_id.up.sql  013_lead_account_relationship.up.sql  014_revenue_range.sql  014_salary_range.sql  015_note_table.sql  016_contact_standalone.up.sql  016_update_salary_ranges.sql  017_contact_many_to_many.sql  017_contact_many_to_many.up.sql  018_employee_count_range.sql  (+137 more)
(+1401 files in other folders)
