[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "langchain>1.0.1",
  "langchain-anthropic>=1.0.1",
  "langgraph>=1.0,<2",
  "langgraph-cli[inmem]>=0.2.8",
  "langchain-openai>=1.0.1",
  "langchain-community>=0.4.1",
  "langchain-core>=0.3.79",
  "python-dotenv>=1.0,<2",
  "langfuse>=3,<4",
  "openai>=2.6.0,<3",
  "fastapi>=0.119.1,<1",
  "uvicorn>=0.38,<1",
  "websockets>=15,<16",
  "pypdf>=5.4.0",
  "google-search-results>=2.4.2",
  "wikipedia>=1.4.0",
  "supabase>=2.0.0",
  "psycopg2-binary>=2.9.11",
  "sqlalchemy>=2.0.0",
  "requests>=2.31.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.6",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent", "api", "models", "controllers", "repositories", "services", "lib"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"
"api" = "src/api"
"models" = "src/models"
"controllers" = "src/controllers"
"repositories" = "src/repositories"
"services" = "src/services"
"lib" = "src/lib"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]